--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-typescript-plus",
-  "description": "A starter kit for TypeScript-based Gatsby projects with sensible defaults.",
+  "name": "rangesrc",
+  "description": "Website for RangesRC",
   "version": "1.0.0",
   "private": true,
-  "author": "Resi Respati <resir014@gmail.com>",
+  "author": "Riccardo Campitelli <riccardo.campitelli91@gmail.com>",
   "keywords": [
     "gatsby"
   ],
