--- a/package.json
+++ b/package.json
@@ -24,16 +24,14 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
-    "babel-plugin-styled-components": "^1.10.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.10.0",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-canonical-urls": "^2.1.0",
-    "gatsby-plugin-emotion": "^4.1.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "^3.1.0",
@@ -52,6 +50,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
@@ -60,6 +60,8 @@
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^5.1.7",
+    "@types/styled-system": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
