--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-plugin-typescript": "^2.1.0",
+    "gatsby-plugin-typography": "^2.10.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-prismjs": "^3.3.0",
@@ -50,9 +51,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "typography": "^0.16.19",
+    "typography-theme-lawton": "^0.16.19"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.8",
@@ -62,6 +66,7 @@
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^5.1.7",
     "@types/styled-system": "^5.1.10",
+    "@types/typography": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
