--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.10.0",
+    "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
@@ -73,6 +74,7 @@
     "eslint-config-blvd": "^1.0.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gh-pages": "^2.0.1",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3"
