--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-is": "^17.0.1",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
