swap main background with forest
also fix fancy sticky top header

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   "rules": {
     "max-len": ["error", { "code": 140, "ignoreUrls": true }],
     "import/prefer-default-export": "off",
+    "react/jsx-filename-extension": "off",
     "import/no-unresolved": "off",
     "consistent-return": "off",
     "prefer-destructuring": "off",
