--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "max-len": ["error", { "code": 140, "ignoreUrls": true }],
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/no-unresolved": "off",
     "consistent-return": "off",
     "prefer-destructuring": "off",
