--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.10.0",
