--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
+    "browser-monads": "^1.0.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.10.0",
     "gatsby-background-image": "^1.3.1",
