--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "gatsby": "^2.10.0",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.2.1",
+    "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-plugin-typescript": "^2.1.0",
