--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "browser-monads": "^1.0.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.10.0",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.2.1",
@@ -49,6 +50,7 @@
     "gatsby-remark-responsive-iframe": "^2.2.0",
     "gatsby-remark-smartypants": "^2.1.0",
     "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-shopify": "^3.10.0",
     "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-remark": "^2.5.0",
     "gatsby-transformer-sharp": "^2.2.0",
@@ -62,6 +64,7 @@
     "react-helmet": "^5.2.1",
     "react-is": "^17.0.1",
     "react-typography": "^0.16.19",
+    "shopify-buy": "^2.11.0",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
     "typescript": "^3.5.2",
