--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-canonical-urls": "^2.1.0",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
