--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.2.1",
