--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "babel-plugin-styled-components": "^1.12.0",
     "browser-monads": "^1.0.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.10.0",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
